--- a/src/App.scss
+++ b/src/App.scss
@@ -40,8 +40,24 @@ ul {
   background-color: base.$gray17;
 }
 
-.comments > li:not(:first-child) {
+@media (min-width: 992px) {
+  .comments-container {
+    width: 365px;
+  }
+}
+
+.comments > li:not(:first-child),
+.child-comments > li {
   margin-top: 15px;
+}
+
+.comment.has-child-comments {
+  background-color: red;
+}
+
+.comment-nested {
+  border-left: 2px solid base.$gray29;
+  padding: 4px 0 0 8px;
 }
 
 .comment-item {
@@ -104,6 +120,10 @@ ul {
   }
 }
 
+.comment-reply.active {
+  color: base.$white;
+}
+
 .comment-dropdown {
   display: none;
   position: absolute;
@@ -152,34 +172,37 @@ ul {
   background-color: $dark;
 }
 
-.comment-form button {
-  color: base.$white;
-  background-color: base.$blue-btn-bg;
-  border-color: base.$blue-btn-b;
-  font-weight: 400;
-  text-align: center;
-  vertical-align: middle;
-  border: 1px solid transparent;
-  cursor: pointer;
-  transition: background-color 0.2s linear, color 0.2s linear,
-    border-color 0.2s linear;
-  padding: 5px 10px;
-  font-size: 12px;
-  line-height: 1.5;
-  border-radius: 3px;
+.reply-btn {
+  @include base.btn();
+  width: min-content;
+  white-space: nowrap;
 
-  &:disabled {
-    cursor: not-allowed;
-    opacity: 0.65;
-  }
-
-  &:hover:not([disabled]) {
-    background-color: base.$blue-btn-bg-h;
-    border-color: base.$blue-btn-b-h;
+  i::before {
+    content: '\f075';
+    @include base.icon;
   }
 }
 
+.reply-cancel-btn {
+  @include base.btn(
+    base.$dark-btn-bg,
+    base.$dark-btn-b,
+    base.$dark-btn-bg-h,
+    base.$dark-btn-b-h
+  );
+  border: 1px solid base.$dark-btn-b;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.comment-form {
+  position: relative;
+}
+
 .comment-form textarea {
+  color: base.$white;
+  width: 100%;
   background-color: transparent;
   min-height: 100px;
   border: 1px solid base.$gray3;
@@ -198,4 +221,13 @@ ul {
 .has-error textarea:focus {
   border-color: base.$red-input-b;
   box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%), 0 0 6px base.$red-input-bs;
+}
+
+.show-more-btn {
+  padding: 0;
+  font-size: 12px;
+  line-height: 1.6;
+  font-weight: 600;
+  transition: all 0.2s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+  color: #747474;
 }
